--- a/dorg-catcher/client/src/app/app.component.html
+++ b/dorg-catcher/client/src/app/app.component.html
@@ -1,5 +1,5 @@
-<app-navigation></app-navigation>
-
+<!--<app-navigation></app-navigation>-->
+<app-side-bar></app-side-bar>
 <main>
   <router-outlet></router-outlet>
 </main>
