--- a/dorg-catcher/client/src/app/index/index.component.html
+++ b/dorg-catcher/client/src/app/index/index.component.html
@@ -1,4 +1,4 @@
-<div class="svg" role="presentation">
+<!--<div class="svg" role="presentation">
   <div class="grails-logo-container">
     <img class="grails-logo" src="../../images/grailsplusangular.svg" alt="Grails plus Angular"/>
   </div>
@@ -54,4 +54,4 @@
     <strong class="centered"><a href="https://grails-slack.cfapps.io" target="_blank">Join the Community</a></strong>
     <p>Get feedback and share your experience with other Grails developers in the community <a href="https://grails-slack.cfapps.io" target="_blank">Slack channel</a>.</p>
   </div>
-</footer>
+</footer>-->
