--- a/dorg-catcher/client/src/app/side-bar/side-bar.component.css
+++ b/dorg-catcher/client/src/app/side-bar/side-bar.component.css
@@ -1,5 +1,6 @@
 .side-bar {
-  width: 64px;
+  width: min-content;
+  width: -moz-min-content;
   height: 100vh;
   text-align: center;
   border-right: solid 1px #AAAAAA;
@@ -9,7 +10,7 @@
 .function {
   width: 40px;
   height: 32px;
-  margin: 20px 10px;
+  margin: 20px 5px;
   padding: 3px;
   border-radius: 4px;
 }
