--- a/dorg-catcher/client/src/app/app.component.html
+++ b/dorg-catcher/client/src/app/app.component.html
@@ -1,4 +1,5 @@
 <!--<app-navigation></app-navigation>-->
+<app-top-bar></app-top-bar>
 <app-side-bar></app-side-bar>
 <main>
   <router-outlet></router-outlet>
