--- a/dorg-catcher/client/src/app/side-bar/side-bar.component.html
+++ b/dorg-catcher/client/src/app/side-bar/side-bar.component.html
@@ -1,6 +1,6 @@
 <div class="side-bar">
   <div>
-    <div class="function" routerLink="" (click)="selectMenu(1)" [ngClass]="{'selected':selected == 1}" placement="right" ngbTooltip="Domain Hit"><a><fa-icon icon="list-ul"></fa-icon></a></div>
+    <div class="function" routerLink="domainHit" (click)="selectMenu(1)" [ngClass]="{'selected':selected == 1}" placement="right" ngbTooltip="Domain Hit"><a><fa-icon icon="list-ul"></fa-icon></a></div>
     <div class="function" routerLink="" (click)="selectMenu(2)" [ngClass]="{'selected':selected == 2}" placement="right" ngbTooltip="Inbox"><a><fa-icon icon="inbox" ></fa-icon></a></div>
     <div class="function" (click)="selectMenu(3)" [ngClass]="{'selected':selected == 3}" placement="right" ngbTooltip="EUI Export History"><a><fa-icon icon="file-export" ></fa-icon></a></div>
     <div class="function" (click)="selectMenu(4)" [ngClass]="{'selected':selected == 4}" placement="right" ngbTooltip="Usage Track"><a><fa-icon icon="users-cog" ></fa-icon></a></div>
