--- a/dorg-catcher/client/src/app/top-bar/top-bar.component.html
+++ b/dorg-catcher/client/src/app/top-bar/top-bar.component.html
@@ -4,12 +4,39 @@
       <h6 class="title">Catcher / Domain Hits</h6>
       <h4 class="sub_title">Domain Hits</h4>
     </div>
+
     <div class="col-md-8 functions">
-      <div class="function" (click)="selectMenu(5)" [ngClass]="{'selected':selected == 5}" placement="right" ngbTooltip="Manage Account Tag"><a><fa-icon icon="tags" ></fa-icon></a></div>
-      <div class="function" (click)="selectMenu(3)" [ngClass]="{'selected':selected == 3}" placement="right" ngbTooltip="EUI Export History"><a><fa-icon icon="file-export" ></fa-icon></a></div>
+      <div class="row">
+      <select class="export-option">
+        <option value=""> Mark as</option>
+        <option value="1">Mark as closed</option>
+        <option value="2">Export as CSV</option>
+      </select>
+      <div class="function" (click)="selectMenu(3)" placement="bottom" ngbTooltip="EUI Export History"><a><fa-icon icon="pen-alt" ></fa-icon></a></div>
+      <div class="function" (click)="selectMenu(5)" placement="bottom" ngbTooltip="Manage Account Tag"><a><fa-icon icon="tag" ></fa-icon></a></div>
+      <div class="function" (click)="selectMenu(3)" placement="bottom" ngbTooltip="EUI Export History"><a><fa-icon icon="file-export" ></fa-icon></a></div>
+      </div>
     </div>
   </div>
-  <div class="nav_button">
+  <div class="nav_button row">
+    <div class="col-md-12">
+      <button type="button" class="btn btn-primary filter">New</button>
+      <button type="button" class="btn btn-light filter">Pending</button>
+      <button type="button" class="btn btn-light filter">Action Taken</button>
+      <button type="button" class="btn btn-light filter">Closed</button>
 
+      <input type="text" class="search-ip filter" placeholder="Search by IP Address">
+      <select class="filter">
+        <option value=""> Filter by platform</option>
+        <option value="1">DO</option>
+        <option value="2">ZI</option>
+      </select>
+
+      <select class="filter">
+        <option value=""> Filter by Catcher Domain</option>
+        <option value="1">Domain 1</option>
+        <option value="2">Domain 2</option>
+      </select>
+    </div>
   </div>
 </div>
