Actions on grid

--- a/dorg-catcher/client/src/app/domainHit/domainHit.component.html
+++ b/dorg-catcher/client/src/app/domainHit/domainHit.component.html
@@ -11,6 +11,7 @@
         rowSelection="multiple"
         [gridOptions]="domainHits.gridOptions"
         (gridReady)="onGridReady($event)"
+        [frameworkComponents]="domainHits.frameworkComponents"
         >
     </ag-grid-angular>
     </div>
