--- a/dorg-catcher/client/src/app/app.component.css
+++ b/dorg-catcher/client/src/app/app.component.css
@@ -1,3 +1,28 @@
 app-side-bar {
   float: left;
 }
+.overlay-container .loader {
+    top: 50%;
+    left: 50%;
+    font-size: 10px;
+    position: absolute;
+    text-indent: -9999em;
+    border-top: 5px solid rgba(255, 255, 255, 0.2);
+    border-right: 5px solid rgba(255, 255, 255, 0.2);
+    border-bottom: 5px solid rgba(255, 255, 255, 0.2);
+    border-left: 5px solid #ffffff;
+    -webkit-transform: translateZ(0);
+    -ms-transform: translateZ(0);
+    -moz-transform: translateZ(0);
+    -o-transform: translateZ(0);
+    transform: translateZ(0);
+    -webkit-animation: load8 1.1s infinite linear;
+    -moz-animation: load8 1.1s infinite linear;
+    -o-animation: load8 1.1s infinite linear;
+    animation: load8 1.1s infinite linear;
+}
+.overlay-container .loader, .overlay-container .loader:after {
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+}
