--- a/dorg-catcher/client/src/app/top-bar/top-bar.component.html
+++ b/dorg-catcher/client/src/app/top-bar/top-bar.component.html
@@ -12,7 +12,7 @@
         <option value="1">Mark as closed</option>
         <option value="2">Export as CSV</option>
       </select>
-      <div class="function" (click)="selectMenu(3)" placement="bottom" ngbTooltip="EUI Export History"><a><fa-icon icon="pen-alt" ></fa-icon></a></div>
+      <div class="function export-func" (click)="selectMenu(3)" placement="bottom" ngbTooltip="EUI Export History"><a><fa-icon icon="pen-alt" ></fa-icon></a></div>
       <div class="function" (click)="selectMenu(5)" placement="bottom" ngbTooltip="Manage Account Tag"><a><fa-icon icon="tag" ></fa-icon></a></div>
       <div class="function" (click)="selectMenu(3)" placement="bottom" ngbTooltip="EUI Export History"><a><fa-icon icon="file-export" ></fa-icon></a></div>
       </div>
