--- a/dorg-catcher/client/src/app/domain-hits/domain-hits.component.html
+++ b/dorg-catcher/client/src/app/domain-hits/domain-hits.component.html
@@ -1,12 +1,12 @@
-<div class="split-example ex2">
+<div class="split-example ex2" id="split">
   <as-split useTransition="true" unit="percent" direction="vertical">
     <as-split-area size="50" order="1" class="center" visible="true" minSize="20">
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tiam, quis nostrud exercitation ullamco
-        laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-        cillum dolore eu fugiat nulla pariatur.</p>
-        <br/>
-      <p>Documentations: https://bertrandg.github.io/angular-split/#/</p>
-      <button class="btn btn-primary" (click)="toggleAreaB()">Primary</button>
+      <div>
+        <ag-grid-angular class="ag-theme-balham" [rowData]="domainHits.data" [columnDefs]="domainHits.columns"
+          rowSelection="multiple" [gridOptions]="domainHits.gridOptions" (gridReady)="onGridReady($event)" (rowClicked)='toggleAreaB($event)'
+          (cellMouseOver)="addHoverColor()">
+        </ag-grid-angular>
+      </div>
     </as-split-area>
     <as-split-area size="50" minSize="30" order="2" [visible]="keepB">
       <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem
@@ -15,7 +15,6 @@
         eodolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et
         dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis
         suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea
-        voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla
         pariatur?</p>
     </as-split-area>
   </as-split>
