styling domain hit page

--- a/dorg-catcher/client/src/styles.css
+++ b/dorg-catcher/client/src/styles.css
@@ -11,11 +11,11 @@
 }
 
 .ag-body-viewport .ag-center-cols-container .ag-row-even {
-  background-color: #a1c9e6;
+  background-color: #eef1f6;
 }
 
 .ag-body-viewport .ag-center-cols-container .ag-row-hover {
-  background-color: #0a4988;
+  background-color: #dee8f8;
 }
 
 .nav {
