--- a/dorg-catcher/client/src/styles.css
+++ b/dorg-catcher/client/src/styles.css
@@ -534,3 +534,20 @@ a.skip {
 .footer a {
     color: #feb672;
 }
+
+app-catcher-email-histories {
+    display: grid;
+}
+
+.mat-tab-label-container>.mat-tab-list>mat-ink-bar.mat-ink-bar {
+    background-color: #1b5eac;
+}
+
+.mat-tab-header-pagination.mat-tab-header-pagination-disabled {
+    display: none !important;
+}
+
+.mat-tab-label-content {
+    color: #1b5eac;
+    font-weight: bold;
+}
