--- a/dorg-catcher/client/src/app/manage-domain/manage-domain.component.html
+++ b/dorg-catcher/client/src/app/manage-domain/manage-domain.component.html
@@ -1,3 +1,6 @@
-<p>
-  manage-domain works!
-</p>
+<div id="content" role="main" class="manage-domain">
+  <ag-grid-angular class="ag-theme-balham" rowSelection="multiple"
+                   [gridOptions]="grid.gridOptions"
+                   (gridReady)="onGridReady($event)">
+  </ag-grid-angular>
+</div>
