--- a/dorg-catcher/client/src/styles.css
+++ b/dorg-catcher/client/src/styles.css
@@ -569,3 +569,26 @@ app-catcher-email-histories {
     color: #1b5eac;
     font-weight: bold;
 }
+
+nav ul {
+  padding: 0;
+  margin: 0;
+}
+
+nav ul li {
+  display: inline-block;
+  height: 30px;
+  width: 25%;
+}
+
+nav ul li a {
+  display: inline-block;
+  height: 100%;
+  line-height: 30px;
+  padding: 0 10px;
+}
+
+nav ul li a:hover {
+  border-bottom: 4px solid #007bff;
+  text-decoration: none;
+}
