--- a/dorg-catcher/client/src/app/catcher-email-history/partial/catcher-email-history-detail/email-content-tab/email-content-tab.component.html
+++ b/dorg-catcher/client/src/app/catcher-email-history/partial/catcher-email-history-detail/email-content-tab/email-content-tab.component.html
@@ -1,3 +1,19 @@
-<p>
-  email-content-tab works!
-</p>
+<div class="email-content-tab">
+    <section class="parsed-signature">
+      <div class="title-info">
+        Parsed Signature
+      </div>
+      <div class="tbl">
+        <div class="tbl-row" *ngFor="let row of sectionRow.parsedSignature.rows">
+          <div class="row">
+            <div class="tbl-cell col-md-3">
+              {{ row[objectKeys(row)] }}
+            </div>
+            <div class="tbl-cell col">
+              {{ data[objectKeys(row)] }}
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+  </div>
